{THEME} Update Theme New Base - Supression dans le forum_top du style "background:none" dans le module_position - Taille du Header r?duite ? 170px - Modificaiton du module_position du forum - Changement de couleur pour les fieldsets du panel d'admin - Correction du bug dans le BBcode (ajout vertical-align:middle) pour le forum

--- a/templates/newbase/modules/forum/forum.css
+++ b/templates/newbase/modules/forum/forum.css
@@ -145,9 +145,9 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 
 }
 .module_top{
-	height:25px;
+	height: 15px;
+    margin: 3px 10px 15px 10px;
 	padding:5px 5px 0px 5px;
-	margin:5px 15px 15px 15px;
 	border:none;
 	color:#334455;
 	font-weight:normal;
@@ -164,6 +164,13 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 	border-bottom:1px solid #FFFFFF;	
 	clear:both;
 }
+
+.module_position{
+	background:#E8EDF3;
+    border: 1px solid #D6DEE7;
+    margin-bottom:15px;	
+}
+
 .module_bottom_l{ /* Barre inférieure des modules */
 
 }
@@ -171,9 +178,9 @@ a.forum_mbrmsg_links { /* Couleur des liens pour les messages du membre */
 
 }
 .module_bottom{
-	height:25px;
-	padding:5px 5px 0px 5px;
-	margin:5px 15px 15px 15px;
+	height: 15px;
+    margin: 3px 10px 15px 10px;
+    padding:5px 5px 0px 5px;
 	border:none;
 	color:#334455;
 	font-weight:normal;
