--- a/templates/newbase/theme/admin.css
+++ b/templates/newbase/theme/admin.css
@@ -99,7 +99,7 @@ div#admin_quick_menu li a.quick_link {
     font-weight:normal;
     font-size:10px;
     color:#0E2A48;
-	background: none repeat scroll 0 0 #F2F8FF;
+	background: none repeat scroll 0 0 #f2f5f8;
     border:1px solid #D6DEE7;
     padding:3px 8px;
     text-decoration:none;
